# cpp_training

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/Test/: .gitignore  CMakeLists.txt  Doxyfile  array  array.cpp  array.hpp  array_list.hpp  array_vector.hpp  coverage.sh  cpp_training.code-workspace  gen_docu.sh  main.cpp  run_target.sh  shape.hpp  shape_crtp.hpp  shape_pimpl.cpp  shape_pimpl.hpp  test.cpp  test_target.sh
